--- a/style.css
+++ b/style.css
@@ -1,45 +1,85 @@
-/* Styling Only Related To ALL Pages */
+@font-face {
+  font-family: kingdom;
+  src: url(https://cdn.glitch.global/bc281a19-7937-4621-a747-fb021bca870c/Kingdom_Hearts_Font.ttf?v=1748561963877);
+}
+@font-face {
+  font-family: boldy;
+  src: url(https://cdn.glitch.global/bc281a19-7937-4621-a747-fb021bca870c/Boldyguard%20Demo.otf?v=1748564529790);
+}
+@font-face {
+  font-family: qicka;
+  src: url(https://cdn.glitch.global/bc281a19-7937-4621-a747-fb021bca870c/Qilka-Bold.ttf?v=1748799761113);
+}
+.all {
+  display: flex;
+  justify-content: center;
+  /*   background: pink; */
+  /*   display: inline-block; */
+  align-items: flex-start;
+  margin: 0;
+  /*   /*     background: yellow; */
+  position: absolute;
+  top: 50%;
+  left: 47.5%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
 
 body {
-  padding-top: 30px;
-  margin-left: 0px;
-  margin-right: 0px;
+  background-image: url("https://cdn.glitch.global/bc281a19-7937-4621-a747-fb021bca870c/wp3933142.jpg?v=1748562529989");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: 0px ;
+  font-family: kingdom;
+  text-align: center;
 }
-/* ⬆⬆⬆⬆ Nav Bar Styling 
-~~~~~ Taken From: 
-https://www.w3schools.com/css/css_navbar_horizontal.asp */
-ul.nav {
+span {
+  font-size: 25px;
+}
+
+ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  overflow: hidden;
-  background-color: #333333;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 999;
+  width: 150px;
+  background-color: #e1b16c;
 }
 
-ul.nav li {
-  float: left;
-}
-
-ul.nav li a {
+li a {
   display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
+  color: #000;
+  padding: 8px 16px;
   text-decoration: none;
 }
 
-ul.nav li a:hover:not(.active) {
-  background-color: yellow;
+li a:hover {
+  background-color: #555;
+  color: white;
 }
-
-ul.nav .active {
-  background-color: red;
+.active {
+  background-color: #000000;
+  color: white;
 }
-
-h1 {
-  width: 100%;
+.maindiv {
+  width: 350px;
+  height: 250px;
+  border: 15px groove #2c2c34;
+  padding: 50px;
+  padding-top: 5px;
+  padding-bottom: 95px;
+  /*   margin: auto; */
+  background: #201a23;
+  color: #e1b16c;
+  font-family: kingdom;
+}
+.navbox {
+  float: left;
+  margin-left: -7.82%;
+  border-style: inset;
+  border-width: thick;
+  border-color: black;
+  font-family: boldy;
+  /*   position: fixed; */
+  /*   top: 17.3%; */
 }
